--- a/TCC_rmk.vcxproj
+++ b/TCC_rmk.vcxproj
@@ -93,6 +93,10 @@
     <ClInclude Include="utils.h" />
     <ClInclude Include="vibe.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="frames.txt" />
+    <Text Include="results.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
